--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.springframework.org/schema/data/jaxb">
 <head>
     <meta charset="UTF-8">
-    <title>Тесттік сайт</title>
+    <title>Страница</title>
     <link rel="stylesheet" th:href = "@{/css/style.css}" />
     <link rel="Icon" type="img/icon" href="images/garland_favicon.png">
 </head>
@@ -13,9 +13,9 @@
 
 
 <div class="menu">
-    <a><strong>Басты бет</strong></a> |
-    <a href="/demo/all">Студент тізімі</a> |
-    <a href="/demo/add">Студентты қосу</a>
+    <a><strong>Главная страница</strong></a> |
+    <a href="/demo/all">Список клиентов</a> |
+    <a href="/demo/add">Добавить клиентов</a>
 </div>
 
 <p>
