--- a/src/main/resources/templates/admin_update.html
+++ b/src/main/resources/templates/admin_update.html
@@ -12,19 +12,19 @@
         <div class="form-group">
             <form action="#" th:action="@{/pub/adds}" th:object = "${publisherr}" method="POST">
                 <label for="name">Name</label>
-                <input type="text" id="name" name="name" th:field = "*{Name}" class="form-control" placeholder="Есімін енгіз" />
+                <input type="text" id="name" name="name" th:field = "*{Name}" class="form-control" placeholder="Имя" />
 
                 <label for="email">Email</label>
-                <input type="text" id="email" name="email" th:field = "*{email}" class="form-control" placeholder="Email енгіз" />
+                <input type="text" id="email" name="email" th:field = "*{email}" class="form-control" placeholder="Ввести Email " />
 
                 <label for="phone">Phone</label>
-                <input type="text" id="phone" name="phone" th:field = "*{phone}" class="form-control" placeholder="Телефон номерінді енгіз"/>
+                <input type="text" id="phone" name="phone" th:field = "*{phone}" class="form-control" placeholder="Ввести Телефон номер"/>
 
                 <label for="address">Address</label>
-                <input type="text" id="address" name="address" th:field = "*{address}" class="form-control" placeholder="мекен-жайды енгіз" />
+                <input type="text" id="address" name="address" th:field = "*{address}" class="form-control" placeholder="Адресс" />
 
                 <br/>
-                <button type="submit" class="btn btn-primary">Сақтау</button>
+                <button type="submit" class="btn btn-primary">Сохранить</button>
 
 
             </form>
