--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -10,18 +10,18 @@
 <body>
 <div class="container">
     <div class="row">
-        <a th:href = "@{/student/add}" class="btn btn-primary btn-lg" role="button">add</a>
+        <a th:href = "@{/client/add}" class="btn btn-primary btn-lg" role="button">add</a>
         <br/>
         <table class="table">
             <tr>
                 <th>Stud Name</th>
                 <th>Stud First</th>
             </tr>
-            <tr th:each = "student : ${students}">
-                <td th:text = "${student.studentName}">test</td>
-                <td th:text = "${student.first}">test</td>
-                <td> <a th:href = "@{'/student/deletestudent?id='+${student.id}}">delete</a></td>
-                <td> <a th:href = "@{'/student/updateStudent?id='+${student.id}}">update</a></td>
+            <tr th:each = "client : ${clients}">
+                <td th:text = "${client.clientName}">test</td>
+                <td th:text = "${client.first}">test</td>
+                <td> <a th:href = "@{'/client/deleteClient?id='+${sclient.id}}">delete</a></td>
+                <td> <a th:href = "@{'/client/updateClient?id='+${client.id}}">update</a></td>
             </tr>
         </table>
     </div>
